# gtksourceview2-sharp

./: .cvsignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.in  gtksourceview-sharp-2.0.pc.in  gtksourceview2-sharp-sources.xml  gtksourceview2-sharp.pc.in  vbnet.lang
doc/: .cvsignore  Makefile.am  gtksourceview2-sharp-docs.source
gtksourceview/: .cvsignore  Global.custom  Gtk.metadata  GtkSourceView.cs  Makefile.am  SourceBuffer.custom  SourceLanguage.custom  SourceLanguageManager.custom  SourceLanguagesManager.custom  SourceStyleScheme.custom  SourceTagTable.custom  gtksourceview-api.raw  gtksourceview2-api.raw  gtksourceview2-sharp.dll.config.in
sample/: Makefile.am  PrintSample.cs  SourceViewTest.cs
sources/: .cvsignore  gtksourceview2-sharp-sources.xml  makefile
