
SUBDIRS=		gtksourceview sample doc 
DISTCLEANFILES = gtksourceview-sharp-2.0.pc
EXTRA_DIST=		nemerle.lang vbnet.lang gtksourceview-sharp-2.0.pc.in gtk-sharp.snk

extra_langdir= $(gtksourceview_prefix)/share/gtksourceview-1.0/language-specs
extra_lang_DATA=	nemerle.lang vbnet.lang

pkgconfigdir = $(prefix)/lib/pkgconfig
pkgconfig_DATA = gtksourceview-sharp-2.0.pc

