
SUBDIRS=		gtksourceview sample doc 
DISTCLEANFILES =	gtksourceview2-sharp.pc
EXTRA_DIST=		nemerle.lang vbnet.lang gtksourceview2-sharp.pc.in gtk-sharp.snk

extra_langdir= $(gtksourceview_prefix)/share/gtksourceview-2.0/language-specs
extra_lang_DATA=	nemerle.lang vbnet.lang

pkgconfigdir = $(prefix)/lib/pkgconfig
pkgconfig_DATA = gtksourceview2-sharp.pc

